--- a/app/src/main/res/layout/activity_gas_station.xml
+++ b/app/src/main/res/layout/activity_gas_station.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sliding_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom"
-    sothree:umanoPanelHeight="0dp"
-    sothree:umanoShadowHeight="4dp">
-
 <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -21,88 +12,23 @@
         android:id="@+id/app_bar"
         layout="@layout/app_bar" />
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="?actionBarSize"
-        app:tabTextColor="@color/icons"
-        app:tabIndicatorColor="@color/icons"
-        app:tabBackground="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/icons"
-        app:tabGravity="fill"
-        app:tabMode="fixed"/>
+    <!--<android.support.design.widget.TabLayout-->
+        <!--android:id="@+id/tabs"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="?actionBarSize"-->
+        <!--app:tabTextColor="@color/icons"-->
+        <!--app:tabIndicatorColor="@color/icons"-->
+        <!--app:tabBackground="@color/colorPrimary"-->
+        <!--app:tabSelectedTextColor="@color/icons"-->
+        <!--app:tabGravity="fill"-->
+        <!--app:tabMode="fixed"/>-->
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
-        android:layout_below="@+id/tabs"
+        android:layout_below="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_marginBottom="?actionBarSize"/>
-
-    <LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:gravity="center|bottom"
-    android:background="@color/icons">
-
-        <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-        android:layout_width="0dp"
-        android:layout_height="?actionBarSize"
-        android:text="@string/search_address"
-        android:id="@+id/button"
-        android:layout_weight="1"
-            style="@style/Widget.AppCompat.Button.Colored" />
-
-        <Button
-        android:layout_width="0dp"
-        android:layout_height="?actionBarSize"
-        android:text="@string/proximity"
-        android:id="@+id/button2"
-        android:layout_weight="1"
-            style="@style/Widget.AppCompat.Button.Colored"/>
-
-        <Button
-        android:layout_width="0dp"
-        android:layout_height="?actionBarSize"
-        android:text="@string/search_setting"
-        android:id="@+id/button3"
-        android:layout_weight="1"
-            style="@style/Widget.AppCompat.Button.Colored"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <View
-        android:id="@+id/coverLyaout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </RelativeLayout>
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include
-        android:id="@+id/app_bar2"
-        layout="@layout/app_bar" />
-
-    <FrameLayout
-        android:id="@+id/sub_context"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-
-</LinearLayout>
-</com.sothree.slidinguppanel.SlidingUpPanelLayout>
