--- a/app/src/main/res/layout/fragment_gas_station_map.xml
+++ b/app/src/main/res/layout/fragment_gas_station_map.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sliding_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    sothree:umanoPanelHeight="0dp"
+    sothree:umanoShadowHeight="4dp">
+
+<RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,6 +25,18 @@
             android:background="@color/secondary_text"
             android:id="@+id/radius"
             android:textAllCaps="false"/>
+
+    <!--<Button-->
+        <!--android:layout_width="85dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:text="목록보기"-->
+        <!--android:textColor="@color/icons"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_margin="12dp"-->
+        <!--android:background="@color/secondary_text"-->
+        <!--android:id="@+id/gas_station_list_button"-->
+        <!--android:textAllCaps="false"/>-->
 
     <!--<LinearLayout-->
         <!--android:orientation="horizontal"-->
@@ -48,6 +70,52 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center|bottom"
+            android:background="@color/icons">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="?actionBarSize"
+                    android:text="@string/search_address"
+                    android:id="@+id/button"
+                    android:layout_weight="1"
+                    style="@style/Widget.AppCompat.Button.Colored" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="?actionBarSize"
+                    android:text="@string/proximity"
+                    android:id="@+id/button2"
+                    android:layout_weight="1"
+                    style="@style/Widget.AppCompat.Button.Colored"/>
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="?actionBarSize"
+                    android:text="@string/search_setting"
+                    android:id="@+id/button3"
+                    android:layout_weight="1"
+                    style="@style/Widget.AppCompat.Button.Colored"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/coverLyaout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"/>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="220dp"
             android:id="@+id/detail_view"
             android:layout_alignParentBottom="true"
@@ -66,22 +134,110 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="New Text"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        android:id="@+id/station_name" />
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="New Text"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:id="@+id/station_name" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="New Text"
+                            android:id="@+id/distance" />
+                    </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="자세히보기"
+                        android:text="길안내"
                         android:layout_alignParentRight="true"
                         android:id="@+id/detail_button"
                         style="@style/Widget.AppCompat.Button.Colored"/>
+
                 </RelativeLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:text="휘발유" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1890"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:id="@+id/gas" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:text="경유" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:text="1910"
+                            android:id="@+id/disel" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="고급휘발유" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:text="2090원"
+                            android:id="@+id/hgas" />
+                    </LinearLayout>
+                </LinearLayout>
 
                 <RelativeLayout
                     android:orientation="horizontal"
@@ -92,16 +248,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Large Text"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
                         android:id="@+id/station_adress" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="길찾기"
-                        android:textColor="@color/icons"
-                        android:background="@drawable/rectangle_border"
-                        android:layout_alignParentRight="true"
-                        android:id="@+id/textView10" />
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="길찾기"-->
+                        <!--android:textColor="@color/icons"-->
+                        <!--android:background="@drawable/rectangle_border"-->
+                        <!--android:layout_alignParentRight="true"-->
+                        <!--android:id="@+id/textView10" />-->
                 </RelativeLayout>
 
                 <LinearLayout
@@ -115,9 +273,89 @@
                         android:text="02-2267-8025"
                         android:id="@+id/station_phone" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/conv_store"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/icons"
+                        android:text="편의점"
+                        android:textSize="12dp"
+                        android:background="@drawable/rectangle_border"
+                        android:visibility="gone"
+                        android:layout_marginRight="3dp"/>
+
+                    <TextView
+                        android:id="@+id/self"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/icons"
+                        android:text="셀프"
+                        android:textSize="12dp"
+                        android:background="@drawable/rectangle_border"
+                        android:visibility="gone"
+                        android:layout_marginRight="3dp"/>
+
+                    <TextView
+                        android:id="@+id/direct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/icons"
+                        android:text="직영점"
+                        android:textSize="12dp"
+                        android:background="@drawable/rectangle_border"
+                        android:visibility="gone"
+                        android:layout_marginRight="3dp"/>
+
+                    <TextView
+                        android:id="@+id/repair"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/icons"
+                        android:text="정비소"
+                        android:textSize="12dp"
+                        android:background="@drawable/rectangle_border"
+                        android:visibility="gone"
+                        android:layout_marginRight="3dp"/>
+
+                    <TextView
+                        android:id="@+id/wash"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/icons"
+                        android:text="세차"
+                        android:textSize="12dp"
+                        android:background="@drawable/rectangle_border"
+                        android:visibility="gone"
+                        android:layout_marginRight="3dp"/>
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
 
 </RelativeLayout>
+
+<LinearLayout
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
+
+<include
+    android:id="@+id/app_bar2"
+    layout="@layout/app_bar" />
+
+<FrameLayout
+    android:id="@+id/sub_context"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+
+</LinearLayout>
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
