--- a/app/src/main/res/menu/menu_gas_station.xml
+++ b/app/src/main/res/menu/menu_gas_station.xml
@@ -2,9 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.GasStationActivity">
-    <!--<item-->
-        <!--android:id="@+id/action_settings"-->
-        <!--android:orderInCategory="100"-->
-        <!--android:title="@string/action_settings"-->
-        <!--app:showAsAction="never" />-->
+    <item
+        android:id="@+id/view_station_list"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_view_list_white_24dp"
+        android:title="목록보기"
+        app:showAsAction="always" />
 </menu>
