--- a/app/src/main/res/layout/fragment_gas_station_map.xml
+++ b/app/src/main/res/layout/fragment_gas_station_map.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sliding_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom"
-    sothree:umanoPanelHeight="0dp"
-    sothree:umanoShadowHeight="4dp">
-
 <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -227,6 +218,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
                             android:text="고급휘발유" />
 
                         <TextView
@@ -338,24 +331,27 @@
             </LinearLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/sub_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            android:clickable="true"
+            android:visibility="gone">
+
+            <include
+                android:id="@+id/app_bar2"
+                layout="@layout/app_bar" />
+
+            <FrameLayout
+                android:id="@+id/sub_context"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+
     </RelativeLayout>
 
 </RelativeLayout>
-
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
-
-<include
-    android:id="@+id/app_bar2"
-    layout="@layout/app_bar" />
-
-<FrameLayout
-    android:id="@+id/sub_context"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
-
-
-</LinearLayout>
-    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
