--- a/app/src/main/res/menu/menu_gas_station.xml
+++ b/app/src/main/res/menu/menu_gas_station.xml
@@ -8,4 +8,12 @@
         android:icon="@drawable/ic_view_list_white_24dp"
         android:title="목록보기"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/search"
+        android:orderInCategory="200"
+        android:icon="@drawable/places_ic_search"
+        android:title="검색설정"
+        android:actionViewClass="android.widget.SearchView"
+        app:showAsAction="collapseActionView|ifRoom"/>
 </menu>
