--- a/app/src/main/res/drawable/rectangle_border.xml
+++ b/app/src/main/res/drawable/rectangle_border.xml
@@ -4,10 +4,10 @@
             android:shape="rectangle">
 
             <!-- view border color and width -->
-            <stroke
-                android:width="1dp"
-                android:color="@color/icons" >
-            </stroke>
+            <!--<stroke-->
+                <!--android:width="1dp"-->
+                <!--android:color="@color/icons" >-->
+            <!--</stroke>-->
 
             <!-- If you want to add some padding -->
             <padding
@@ -22,6 +22,6 @@
                 android:radius="5dp"   >
             </corners>
 
-            <solid android:color="@color/secondary_text"></solid>
+            <solid android:color="@color/hint"></solid>
 
         </shape>
