--- a/app/src/main/res/layout/fragment_gas_station_detail.xml
+++ b/app/src/main/res/layout/fragment_gas_station_detail.xml
@@ -160,8 +160,7 @@
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/abc_action_bar_title_item" />
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
     <LinearLayout
