--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -5,6 +5,7 @@
     android:background="@color/colorPrimary"
     android:id="@+id/fragment_navigation_drawer"
     android:orientation="vertical"
+    android:clickable="true"
     tools:context="com.example.young_jin.fragments.NavigationDrawerFragment">
 
     <LinearLayout
