--- a/app/src/main/res/layout/fragment_search_setting.xml
+++ b/app/src/main/res/layout/fragment_search_setting.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/icons">
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/icons"
+        android:padding="20dp">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -14,6 +20,7 @@
             android:layout_height="wrap_content"
             android:text="관심 유종"
             android:textSize="16dp"
+            android:textStyle="bold"
             android:padding="10dp"
             android:id="@+id/textView2" />
     </LinearLayout>
@@ -26,25 +33,40 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="DIESEL"
-            android:id="@+id/button4"
-            android:layout_weight="1" />
+            android:text="휘발유"
+            android:textColor="@color/icons"
+            android:id="@+id/gas"
+            android:layout_weight="1"
+            android:background="@color/third_background"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="GAS"
-            android:id="@+id/button5"
-            android:layout_weight="1" />
+            android:text="경유"
+            android:textColor="@color/icons"
+            android:id="@+id/digel"
+            android:background="@color/colorPrimary"
+            android:layout_weight="1"
+            android:layout_marginLeft="1dp"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="HGAS"
-            android:id="@+id/button6"
+            android:text="고급휘발유"
+            android:textColor="@color/icons"
+            android:id="@+id/hgas"
+            android:background="@color/third_background"
+            android:layout_marginLeft="1dp"
             android:layout_weight="1" />
     </LinearLayout>
+</LinearLayout>
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:background="@color/second_background">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -55,6 +77,7 @@
             android:layout_height="wrap_content"
             android:text="시설 필터"
             android:textSize="16dp"
+            android:textStyle="bold"
             android:padding="10dp"
             android:id="@+id/textView3" />
     </LinearLayout>
@@ -103,37 +126,76 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content">
 
-        <Switch
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="편의점"
-            android:id="@+id/switch1" />
+            android:textColor="@color/icons"
+            android:id="@+id/conv_store"
+            android:background="@color/colorPrimary"
+            android:layout_weight="1" />
 
-        <Switch
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="셀프"
-            android:id="@+id/switch2" />
+            android:textColor="@color/icons"
+            android:id="@+id/self"
+            android:background="@color/third_background"
+            android:layout_marginLeft="1dp"
+            android:layout_weight="1" />
 
-        <Switch
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="직영점"
-            android:id="@+id/switch3" />
+            android:textColor="@color/icons"
+            android:id="@+id/direct"
+            android:background="@color/colorPrimary"
+            android:layout_marginLeft="1dp"
+            android:layout_weight="1" />
 
-        <Switch
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="정비소"
-            android:id="@+id/switch4" />
+            android:textColor="@color/icons"
+            android:id="@+id/repair"
+            android:background="@color/third_background"
+            android:layout_marginLeft="1dp"
+            android:layout_weight="1" />
 
-        <Switch
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="세차"
-            android:id="@+id/switch5" />
+            android:textColor="@color/icons"
+            android:id="@+id/wash"
+            android:background="@color/third_background"
+            android:layout_marginLeft="1dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+        </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/third_background">
+        <Button
+            android:id="@+id/cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="취소"
+            android:layout_weight="1" />
+        <Button
+            android:id="@+id/confirm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="확인"
+            android:layout_weight="1"
+            style="@style/Widget.AppCompat.Button.Colored"/>
     </LinearLayout>
 </LinearLayout>
