--- a/app/src/main/res/layout/highlighted_custom_marker.xml
+++ b/app/src/main/res/layout/highlighted_custom_marker.xml
@@ -4,15 +4,15 @@
     android:layout_height="wrap_content">
 
     <!--<ImageView-->
-        <!--android:layout_width="55dp"-->
-        <!--android:layout_height="65dp"-->
-        <!--android:src="@drawable/ic_cast_dark" />-->
+    <!--android:layout_width="55dp"-->
+    <!--android:layout_height="65dp"-->
+    <!--android:src="@drawable/ic_cast_dark" />-->
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:id="@+id/marker_background"
-        android:src="@drawable/marker_background"
+        android:src="@drawable/highlighted_marker_background"
         android:adjustViewBounds="true" />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:text="1120원"
-        android:background="@color/icons"
+        android:textColor="@color/icons"
         android:textSize="12dp"
         android:textStyle="bold" />
 
