--- a/app/src/main/res/layout/list_app_bar.xml
+++ b/app/src/main/res/layout/list_app_bar.xml
@@ -7,28 +7,43 @@
     app:theme="@style/ThemeOverlay.AppCompat.Dark"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <RadioGroup
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal">
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/filter_distance"
-            android:textColor="@color/icons"
-            android:id="@+id/filter_distance" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/icons"
+        android:gravity="center_horizontal"
+        android:padding="1dp"
+        android:layout_margin="10dp">
 
-        <RadioButton
+        <Button
+            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filter_price"
+            android:text="거리순"
+            android:background="@color/icons"
+            android:textColor="@color/colorPrimary"
+            android:id="@+id/filter_distance"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             android:textColor="@color/icons"
-            android:textColorLink="@color/icons"
-            android:textColorHint="@color/icons"
-            android:id="@+id/filter_price" />
-    </RadioGroup>
+            android:text="가격순"
+            android:id="@+id/filter_price"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.Toolbar>
