--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#B5303C</color>
+    <!--<color name="colorPrimary">#B5303C</color>-->
+    <color name="colorPrimary">#df0036</color>
     <color name="colorPrimaryDark">#A02B35</color>
     <color name="colorAccent">#FF4081</color>
     <color name="icons">#FFFFFF</color>
 
-    <color name="colorMapRadius">#353F51B5</color>
-    <color name="colorMapStroke">#353F51B5</color>
+    <!--<color name="colorMapRadius">#353F51B5</color>-->
+    <color name="colorMapRadius">#1548c5f7</color>
+    <color name="colorMapStroke">#48c5f7</color>
+
+    <color name="selected_list_background_color">#25212121</color>
+    <color name="setting_item_background">#d7d7d7</color>
+
+    <color name="second_background">#f5f5f5</color>
+    <color name="third_background">#dedede</color>
+    <color name="sub_text">#359bd9</color>
+
 
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#616161</color>
